--- a/view/films.phtml
+++ b/view/films.phtml
@@ -18,7 +18,7 @@
       <div class="filmCard">
         <h2><?php echo $film->title ?></h2>
         <h3>(<?php echo $film->titleOriginal ?>)</h3>
-        <p><?php echo $film->poster ?></p>
+        <img src="<?php echo $film->poster ?>" alt="">
         <p><?php echo $film->overview ?></p>
         <h4>Жанры</h4>
         <p><?php echo $film->genresId ?></p>
