--- a/view/films.phtml
+++ b/view/films.phtml
@@ -9,11 +9,17 @@
   <link rel="stylesheet" href="./view/css/films.css">
 </head>
 <body>
+  <div>
+  </div>
   <div class="container">
     <div class="list">
       <?php
         foreach ($films as $film) {
-          print_r($film->genresList);
+          $datetime1 = date_create();
+          $datetime2 = date_create($film->releaseDate);
+          $interval = date_diff($datetime1, $datetime2);
+
+          if( $interval->m === 0 && $interval->d < $dayFilter ) {
       ?>
       <div class="filmCard">
         <h2><?php echo $film->title ?></h2>
@@ -25,6 +31,7 @@
         <p><?php echo $film->releaseDate ?></p>
       </div>
       <?php
+          }
         }
       ?>
     </div>
