--- a/view/succes.html
+++ b/view/succes.html
@@ -15,7 +15,7 @@
   </div>
   <script>
     setTimeout(function(){
-      document.location.href="index.php";
+      document.location.href="pickMod.php";
     },2000);
   </script>
 </body>
