--- a/view/films.phtml
+++ b/view/films.phtml
@@ -32,7 +32,7 @@
     <div class="list">
       <?php
         $i=0;
-        foreach ($films as $film) {
+        foreach ($this->films as $film) {
           $datetime1 = date_create();
           $datetime2 = date_create($film->releaseDate);
           $interval = date_diff($datetime1, $datetime2);
