+setData method is now universal method (takes $data and $table parametrs)

--- a/view/succes.html
+++ b/view/succes.html
@@ -14,9 +14,9 @@
     <h4>You wil be redirected in 2 seconds</h6>
   </div>
   <script>
-    setTimeout(function(){
-      document.location.href="pickMod.php";
-    },2000);
+    // setTimeout(function(){
+    //   document.location.href="pickMod.php";
+    // },2000);
   </script>
 </body>
 </html>
