--- a/view/films.phtml
+++ b/view/films.phtml
@@ -46,7 +46,7 @@
         <img src="<?php echo $film->poster ?>" alt="">
         <p><?php echo $film->overview ?></p>
         <h3 class="genre">Жанры:</h3>
-        <p><i><?php echo $film->genresId ?></i></p>
+        <p><i><?php echo $film->genres ?></i></p>
         <p class="date">Дата релиза: <?php echo $film->releaseDate ?></p>
       </div>
       <?php
