+Checking how universal Basic classes are +adding posibility to get TV shows +only two classes was added Show and DataShow +one view was added shows.phtmml +one property added to App class

--- a/view/films.phtml
+++ b/view/films.phtml
@@ -26,6 +26,11 @@
           <input type="submit" name="applyDays" value="Apply">
         </form>
       </div>
+      <div class="daysFilter">
+        <form action="index.php" method="post">
+          <input type="submit" name="shows" value="shows">
+        </form>
+      </div>
     </div>
   </header>
   <div class="container">
