--- a/view/films.phtml
+++ b/view/films.phtml
@@ -52,6 +52,7 @@
         <p><?php echo $film->overview ?></p>
         <h3 class="genre">Жанры:</h3>
         <p><i><?php echo $film->genres ?></i></p>
+        <p>Продолжительность:<i><?php echo $film->runtime ?></i></p>
         <p class="date">Дата релиза: <?php echo $film->releaseDate ?></p>
       </div>
       <?php
